# avatar-ws

./: .gitignore  README.md
odrive-demo/: README.md  pyproject.toml
odrive-demo/odrive-tools/: arm-movement.py  configure-odrive.py  single-computer-control.py  single-odrive-control.py  socket-client-encoder.py  socket-server-motor.py
src/avatar_control/: CMakeLists.txt  package.xml
src/avatar_control/config/: robot_control.yaml
src/avatar_control/launch/: robot_control.launch  rqt_dashboard.launch
src/avatar_control/rqt_config/: avatar-pid-tuner.perspective
src/avatar_description/: CMakeLists.txt  package.xml
src/avatar_description/launch/: avatar_rviz.launch
src/avatar_description/meshes/: arm_link_1.STL  arm_link_2.STL  base_link.STL  diff_1_bottom.STL  diff_1_top.STL  diff_2_top.STL
src/avatar_description/rviz/: config.rviz
src/avatar_description/src/: parser.cpp
src/avatar_description/urdf/: avatar_description.gazebo  avatar_description.xacro
src/avatar_gazebo/: CMakeLists.txt  package.xml
src/avatar_gazebo/launch/: avatar_sim.launch
src/avatar_msgs/: CMakeLists.txt  package.xml
src/avatar_msgs/msg/: JointStateExpanded.msg
src/odrive_control/: CMakeLists.txt  package.xml
src/odrive_control/scripts/: haptic_single_joint.py  pos_publisher.py
src/transform_jacobian/: CMakeLists.txt  package.xml
src/transform_jacobian/scripts/: test_pub.py  test_sub.py
