[tool.poetry]
name = "avatar"
version = "0.1.0"
description = "AVATAR capstone project"
authors = ["Karl Swanson"]

[tool.poetry.dependencies]
python = "^3.9"
odrive = "^0.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
